--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       name="keywords"
       content="Omar Ibrahim, Computer Engineer, Fullstack Developer, Web UI"
     />
+    <meta property="og:image" content="blob:https://vercel.com/02b21c3a-b78d-4b19-85b2-ac1433c54486" />
     <meta property="og:title" content="Omar Ibrahim's portfolio" />
     <meta
       property="og:description"
